[project]
name = "hashguard"
packages = [{ include = "app" }]
version = "0.1.0"
description = "AI-enhanced file integrity monitor"
authors = [
    {name = "void-dar"}
]
requires-python = "^3.11"
dependencies = [
    "fastapi[standard] (>=0.136.0,<0.137.0)",
    "sqlmodel (>=0.0.19)",
    "psycopg2-binary (>=2.9.9)",
    "scikit-learn (>=1.4.2)",
    "numpy (>=1.26.4)",
    "python-multipart (>=0.0.9)",
    "uvicorn[standard] (>=0.29.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "pandas (>=3.0.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
hashguard = "app.main:app"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
httpx = ">=0.27.0"
pytest-asyncio = ">=0.23.0"

[tool.poetry]
name = "hashguard"
packages = [{ include = "app" }]
